--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
             <!-- Assets -->
             <a-assets>
-                <video id="demo-video" src="Assets/EK_Reel_Visitenkarte.mp4" playsinline muted preload="auto"></video>
+                <video id="demo-video" src="Assets/Ek Reel Visitenkarte_V7.mp4" playsinline muted preload="auto"></video>
                 <img id="rewind-button-image" src="IconsPNG/replay_icon.png">
                 <img id="home-button-image" src="IconsPNG/Home_icon.png">
                 <img id="unmute-button-image" src="IconsPNG/unmute_icon.png">
